# openebs

./: .codespell-ignores.txt  .gitattributes  .gitignore  .gitmodules  .krew.yaml  .pre-commit-config.yaml  .travis.yml  ADD "FAQ Column" in the website for Hacktoberfest2020  ADOPTERS.md  Add "FAQ" column in the website  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  Gitlab ,BitBucket accounts of openebs and mayadata  LICENSE  MAINTAINERS  MAINTAINERS.md  MAINTAINERS.old  Makefile  NOTICE.md  OPENEBS RUSSIAN Translation.txt  OpenEBS documentation  README-TR.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SECURITY_CONTACTS.md  Update Readme  Welcome to OpenEBS Documentation Edited.html  _config.yml  artifacthub-repo.yml  auto-version.sh  charts.js  commitlint.config.js  create a online website JS  ct.yaml  default.nix  (+9 more)
.github/: CODEOWNERS  COMMIT_TEMPLATE  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
api/: README.md  common.go  common_test.go
charts/: .helmignore  Chart.yaml  README.md  images.txt  shell.nix  values.yaml
cli/: cli.go  flagerrors.go  required.go  usage.go
cliconfig/: config.go  config_test.go
client/: client.go  client_test.go  client_unix.go  errors.go  info.go  info_test.go  interface.go  interface_experimental.go  interface_stable.go  request.go  request_test.go  version.go  vsm_create.go  vsm_list.go
community/: README.md  community_support_process.md
contribute/: CONTRIBUTING-TO-CI-AND-E2E.md  CONTRIBUTING-TO-DEVELOPER-DOC.md  CONTRIBUTING-TO-K8S-DEMO.md  CONTRIBUTING-TO-KUBERNETES-OPENEBS-PROVISIONER.md  git-cheatsheet.md  git-commit-message.md  issues.md  labels-of-issues.md  myfirstmodule.js
daemon/: README.md  common.go  config.go  config_test.go  config_unix.go  daemon.go  daemon_unix.go  debugtrap_unix.go  info.go  storage_actions.go  storage_controller.go  storage_db.go  storage_types.go  vsm.go  vsm_as_lxc.go  vsm_common.go  vsm_controller.go  vsm_create.go  vsm_destroy.go  vsm_export.go  vsm_facade.go  vsm_import.go  vsm_list.go  vsm_read.go  vsm_update.go
designs/: README.md  oep-process.md  oep-template.md
docs/: Installing-from-binaries.md  Prepare_your_systemrst  configure.md  getting-started.md  installing-from-source.md  make.bat  overview.md  using-with-docker.md
documentation/: Makefile  Prepare_your_system.rst  README.md  getting_started.rst
e2e/: README.md  testbed-setup.md
exactlab/: Readme.md
k8s/: README.md  cspc-operator.yaml  cspc_install.sh  cstor-operator.yaml  openebs-alertmanager.yaml  (+20 more)
k8s-demo/: README.md  Vagrantfile  demo-pod.yaml  demo-vsm.hcl  iscsid.conf  my-nginx-pod-on-openebs.yaml  my-nginx-pod.yaml  persistent_volume_instructions.md  run-k8s-hello-world.md  run-mysql-openebs.md  tutorial-ubuntu1604-vagrant.md
openebs_upgrade/: Cargo.toml
openebs_upgrade/src/: constants.rs  error.rs  helm.rs  lib.rs  utils.rs
openebs_upgrade/src/helm/: data_plane_upgrader.rs  metadata.rs  upgrade.rs
openebs_upgrade/src/helm/upgrade/: config.rs  upgrader.rs
plugin/: Cargo.toml  README.md
plugin/src/: lib.rs  main.rs
plugin/src/cli_utils/: mod.rs
plugin/src/cli_utils/clusterinfo/: mod.rs
plugin/src/cli_utils/localpv/: mod.rs
plugin/src/cli_utils/localpv/hostpath/: mod.rs
plugin/src/cli_utils/localpv/hostpath/volume/: mod.rs  types.rs
plugin/src/cli_utils/localpv/lvm/: mod.rs
plugin/src/cli_utils/localpv/lvm/node/: mod.rs  types.rs
plugin/src/cli_utils/localpv/lvm/volume/: mod.rs  types.rs
plugin/src/cli_utils/localpv/zfs/: mod.rs
plugin/src/cli_utils/localpv/zfs/node/: mod.rs  types.rs
plugin/src/cli_utils/localpv/zfs/volume/: mod.rs  types.rs
plugin/src/cli_utils/localpvhostpath/: mod.rs
plugin/src/cli_utils/localpvhostpath/volume/: mod.rs  types.rs
plugin/src/cli_utils/localpvlvm/: mod.rs
plugin/src/cli_utils/localpvlvm/node/: mod.rs  types.rs
plugin/src/cli_utils/localpvlvm/volume/: mod.rs  types.rs
plugin/src/cli_utils/localpvzfs/: mod.rs
plugin/src/cli_utils/localpvzfs/node/: mod.rs  types.rs
plugin/src/cli_utils/localpvzfs/volume/: mod.rs  types.rs
plugin/src/cli_utils/mayastor/: mod.rs
(+1424 files in other folders)
