[package]
name = "kubectl-openebs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["color", "derive"] }
kubectl-plugin = { path = "../mayastor/k8s/plugin", default-features = false }
utils = { path = "../mayastor/dependencies/control-plane/utils/utils-lib" }
rest-plugin = { path = "../mayastor/dependencies/control-plane/control-plane/plugin", default-features = false }
upgrade = { path = "../mayastor/k8s/upgrade" }
anyhow = "1.0.75"
async-trait = "0.1.73"
tokio = { version = "1.33.0" }
shutdown = { path = "../mayastor/dependencies/control-plane/utils/shutdown"}
