[package]
name = "kubectl-openebs"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "kubectl-openebs"
path = "src/main.rs"

[features]
default = ["rls"]
rls = ["openapi/tower-client-rls", "rest-plugin/rls"]
tls = ["openapi/tower-client-tls", "rest-plugin/tls"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kubectl-plugin = { path = "../mayastor/k8s/plugin", default-features = false }
rest-plugin = { path = "../mayastor/dependencies/control-plane/control-plane/plugin", default-features = false }
shutdown = { path = "../mayastor/dependencies/control-plane/utils/shutdown"}
openapi = { path = "../mayastor//dependencies/control-plane/openapi", default-features = false, features = ["tower-trace"]  }
kube-proxy = { path = "../mayastor/dependencies/control-plane/k8s/proxy" }
utils = { path = "../mayastor/dependencies/control-plane/utils/utils-lib" }
upgrade = { path = "../mayastor/k8s/upgrade" }
byte-unit = "4.0.19"
bytes = "1.5.0"
anyhow = "1.0.92"
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["color", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["v1_24"] }
kube = { version = "0.94.2", features = ["derive", "runtime"] }
lazy_static = "1.5.0"
prettytable-rs = "0.10.0"
serde = "1.0.214"
serde_json = {version = "1.0.132"}
serde_yaml = "0.9.34"
snafu = "0.8.5"
tokio = { version = "1.41.0", features=["full"] }
